# esp32_s3_4848S040

./: CMakeLists.txt  Kconfig  LICENSE  idf_component.yml
include/: bsp.h
include/bsp/: esp-bsp.h
src/: bsp.c
